<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portofolio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/streamer_text"
        android:id="@+id/streamer"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text"
        android:onClick="onButtonClick"
        android:textSize="@dimen/button_textSize"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/duo1"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_below="@+id/streamer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text"
        android:onClick="onButtonClick"
        android:textSize="@dimen/button_textSize" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/du2"
        android:layout_below="@+id/duo1"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text"
        android:onClick="onButtonClick"
        android:textSize="@dimen/button_textSize"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terminator"
        android:id="@+id/terminator"
        android:layout_below="@+id/du2"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text"
        android:onClick="onButtonClick"
        android:textSize="@dimen/button_textSize"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reader"
        android:id="@+id/materialize"
        android:layout_below="@+id/terminator"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text"
        android:onClick="onButtonClick"
        android:textSize="@dimen/button_textSize"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/materialize"
        android:layout_marginTop="@dimen/button_padding"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text"
        android:onClick="onButtonClick"
        android:textSize="@dimen/button_textSize"/>

</RelativeLayout>
